Finish Role Permissions in Frontend-Service

--- a/cad-Frontend/src/app/components/auth/sign-up/sign-up.component.html
+++ b/cad-Frontend/src/app/components/auth/sign-up/sign-up.component.html
@@ -55,7 +55,7 @@
           <div *ngSwitchCase="roles.TRAINER">
             <mat-form-field class="example-full-width">
               <mat-label>Gym</mat-label>
-              <mat-select>
+              <mat-select formControlName="tenantId">
                 <mat-option
                   *ngFor="let tenant of tenants$ | async"
                   [value]="tenant.tenantId"
