--- a/cad-Frontend/src/app/components/dashboard/components/user-profile/user-profile.component.html
+++ b/cad-Frontend/src/app/components/dashboard/components/user-profile/user-profile.component.html
@@ -23,7 +23,7 @@
             Email: <strong>{{ user.email }}</strong>
           </p>
           <p>
-            Email Verified: <strong>{{ user.emailVerified }}</strong>
+            Email Verified: <strong>{{ user.isEmailVerified }}</strong>
           </p>
         </div>
       </div>
