--- a/cad-Frontend/src/app/components/auth/sign-in/sign-in.component.html
+++ b/cad-Frontend/src/app/components/auth/sign-in/sign-in.component.html
@@ -19,7 +19,7 @@
         <input
           type="text"
           class="formControl"
-          placeholder="Username"
+          placeholder="Email"
           #userName
           required
         />
