--- a/cad-Frontend/src/app/app.component.scss
+++ b/cad-Frontend/src/app/app.component.scss
@@ -11,7 +11,7 @@
   height: 60px;
   display: flex;
   align-items: center;
-  background-color: #1976d2;
+  background-color: rgb(53, 102, 54);
   color: white;
   font-weight: 600;
 }
