--- a/cad-Frontend/src/styles.scss
+++ b/cad-Frontend/src/styles.scss
@@ -338,7 +338,7 @@ a:not([href]):not([tabindex]):hover {
 }
 
 .bg-dark {
-  background-color: #3f51b5 !important;
+  background-color: rgb(53, 102, 54) !important;
 }
 
 .gap-right {
