--- a/cad-Frontend/src/app/components/dashboard/dashboard.component.html
+++ b/cad-Frontend/src/app/components/dashboard/dashboard.component.html
@@ -1,14 +1,22 @@
-<!-- Top navigation -->
-<nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-  <a class="navbar-brand col-sm-3 col-md-2 mr-0">
-    <img
-      style="height: 55px"
-      class="brand-logo"
-      src="assets/gymapp.png"
-      alt="gymapp Logo"
-    />
-  </a>
-</nav>
+<div class="toolbar" role="banner">
+  <img
+    *ngIf="imageUrl"
+    class="brand-logo"
+    alt="Logo"
+    [src]="imageUrl"
+    width="40"
+  />
+  <img
+    *ngIf="!imageUrl"
+    class="brand-logo"
+    alt="Logo"
+    src="assets/gymapp.png"
+    width="60"
+  />
+  <span class="name" *ngIf="gym$ | async as gym">
+    {{ gym.name }}
+  </span>
+</div>
 
 <!-- Sidebar navigation -->
 <div class="container-fluid">
